fix/to(all): fix maven dependencies &  debug unit test